crates/templates/tests/snapshots/function__impl-11.snap
---
source: crates/templates/tests/function.rs
description: Function with a local and global default options with the same name
expression: output
---
# Function with a local required option
foo() {
  # Parse command arguments
  parse_foo_arguments "$@"

  
  if [[ -z "${args['default']}" ]]; then
    args['default']="foo"
  fi
  echo "No implementation body found for function foo"
}

