crates/templates/tests/snapshots/function__impl-12.snap
---
source: crates/templates/tests/function.rs
description: "Function with a local and two global default options, one with the same name"
expression: output
---
# Function with a local default option
foo() {

  
  if [[ -z "${args['default']}" ]]; then
    args['default']="true"
  fi
  if [[ -z "${args['foo']}" ]]; then
    args['foo']="foo"
  fi
}

