crates/templates/tests/snapshots/function__impl-14.snap
---
source: crates/templates/tests/function.rs
description: Function with default positional argument
expression: output
---
# Function with a default positional argument
foo() {
  local rargs_default
  # Parse command arguments
  parse_foo_arguments "$@"

  
    
  if [[ -z "$rargs_default" ]]; then
    rargs_default="true"
  fi
    
  echo "No implementation body found for function foo"
}

