crates/templates/tests/snapshots/function__impl-16.snap
---
source: crates/templates/tests/function.rs
description: Function with a local positional argument with choices
expression: output
---
# Function with a local positional argument with choices
foo() {
  # Parse command arguments
  parse_foo_arguments "$@"

  
  if [[ -n "${args['choices']}" ]]; then
    if [[ ! "(one two three)" =~ ${args['choices']} ]]; then
      printf "\e[31m%s\e[33m%s\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid option for " "choices" ": " "${args['choices']}" >&2
      foo_usage >&2
      exit 1
    fi
  fi
  echo "No implementation body found for function foo"
}

