crates/templates/tests/snapshots/function__impl-19.snap
---
source: crates/templates/tests/function.rs
description: Function that is configured to use a subcommand
expression: output
---
# Function with a local option with choices
foo() {
  # Parse command arguments
  parse_foo_arguments "$@"

  local sub="./subcommand.sh"
  echo "Hello, world!"
  $sub $@
}

