crates/templates/tests/snapshots/function__impl-2.snap
---
source: crates/templates/tests/function.rs
description: Function with no lines
expression: output
---
# Simple function
foo() {
  # Parse command arguments
  parse_foo_arguments "${input[@]}"

  echo "No implementation body found for function foo"
}

